Removed logging from inside workflow and refactoring of workflow
1)Removed logging. Instead, added WorkflowLogListener that listenes for events and should log those.
2)Changed Subworkflow to return a context with a parent context instead of null. This will be useful when we
need to diffirentiate events and associated them with subworkflows.
3)Added workflowstore interface that will be used to store task input/output/checkpoint data during workflow execution. Added a simple implementation that stores data on the file system using apache forty for serialization and deserialization.

Signed-off-by: barracuda <dimitrijchannel@gmail.com>