@@ -43,6 +43,7 @@ dependencies {
     implementation("org.mapstruct:mapstruct:1.6.3")
     implementation("commons-validator:commons-validator:1.10.1")
     implementation("com.googlecode.libphonenumber:libphonenumber:9.0.31")
+    implementation("org.apache.fory:fory-core:1.3.0")
 
     annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")
     spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.14.0")
@@ -76,7 +77,7 @@ tasks.spotbugsMain {
 tasks.withType<Test> {
     useJUnitPlatform()
     maxHeapSize = "4g"
-    jvmArgs = listOf("--enable-preview")
+    jvmArgs = listOf("--enable-preview","--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
 }
 
 tasks.withType<JavaCompile>(){
